--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -8,10 +8,12 @@
 
     <ImageView
         android:id="@+id/movie_thumbnail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="fitXY"
-        android:src="@drawable/ic_popup_sync_1"/>
+        android:layout_width="@dimen/moviePosterHeight"
+        android:layout_height="@dimen/moviePosterHeight"
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"
+        android:gravity="left"
+        />
 
     <TextView
         android:id="@+id/movie_caption"
