--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -12,5 +12,7 @@
         <!-- item name="android:typeface">monospace</item-->
         <item name="android:textSize">25sp</item>
     </style>
-
+    <dimen name="movieTextViewHeight">40dp</dimen>
+    <dimen name="moviePosterHeight">120dp</dimen>
+    <dimen name="moviePosterMainHeight">342dp</dimen>
 </resources>
