--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,4 +34,7 @@
         <item name="android:textSize">25sp</item>
     </style>
 
+    <dimen name="movieTextViewHeight">40dp</dimen>
+    <dimen name="moviePosterHeight">120dp</dimen>
+    <dimen name="moviePosterMainHeight">342dp</dimen>
 </resources>
