--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="movieTextViewHeight">40dp</dimen>
+    <dimen name="moviePosterHeight">120dp</dimen>
+    <dimen name="moviePosterMainHeight">342dp</dimen>
 </resources>
