--- a/app/src/main/res/menu/menu_movie.xml
+++ b/app/src/main/res/menu/menu_movie.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/sory_by"
         android:orderInCategory="101"
@@ -15,6 +13,9 @@
             <item
                 android:id="@+id/mi_rating"
                 android:title="@string/mi_rated"/>
+            <item
+                android:id="@+id/mi_fav"
+                android:title="@string/mi_fav"/>
         </menu>
     </item>
 </menu>
